--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
-    "tailwindcss": "^3.0.24",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@types/react": "^18.0.21",
     "@typescript-eslint/parser": "^5.38.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.24.0",
     "eslint-plugin-astro": "^0.19.0",
-    "rehype-add-classes": "^1.0.0"
+    "postcss": "^8.4.32",
+    "rehype-add-classes": "^1.0.0",
+    "tailwindcss": "^3.4.0"
   }
 }
